feat: use modrinth for by-version updater checks